Fixed fonts and spacing on about page.

--- a/state_gov_tracker_app/static/css/styles.css
+++ b/state_gov_tracker_app/static/css/styles.css
@@ -664,7 +664,7 @@ legend {
 .bio_text {
     float: left;
     width: 100%;
-    text-align: justify;
+    text-align: left;
 }
 
 .pull_quote_left {
